--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,14 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  
+    <link href="https://fonts.googleapis.com/css2?family=Sunflower:wght@300;500;700&display=swap" rel="stylesheet">
+
     <title>iAnimeApp</title>
   </head>
   <body>
     <div id="root"></div>
-
   </body>
+  <script type="module" src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
 </html>
