--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,25 @@
       name="description"
       content="Web site created using create-react-app"
     />
+
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com/"/>
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link href="https://fonts.googleapis.com/css2?family=Sunflower:wght@300;500;700&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Sunflower:wght@300;500;700&display=swap" rel="stylesheet"> -->
 
     <title>iAnimeApp</title>
   </head>
   <body>
     <div id="root"></div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+    <script>
+      WebFont.load({
+        google: {
+          families: ['Sunflower'],
+        },
+      })
+    </script>
   </body>
 </html>
